Revert "hardening step 3"
This reverts commit c41276fee8f487f15f2299919b6dcb169766236c.
